# aurex-x_codex

./: .gitignore  Cargo.toml  aurora_flight.ppm  choir_fractal_growth.ppm  circuit_rhythm_world.ppm  circuit_world.ppm  djinn_circuit_cathedral.ppm  fractal_temple.ppm  fractal_temple_world.ppm  harmonic_tunnel.ppm  neon_tunnel.ppm  opera_resonance_hall.ppm  particle_storm.ppm  prime_pulse_concert.ppm  prime_pulse_music.ppm  prime_pulse_rhythm.ppm  prime_pulse_sanctum.ppm  psy_tunnel.ppm  psyspiral_tunnel.ppm  psytrance_dimension.ppm  rhythm_tunnel.ppm  singing_fractal_temple.ppm
crates/aurex_app/: Cargo.toml
crates/aurex_app/src/: boot_runtime.rs  creative_director.rs  determinism.rs  experience_planner.rs  identity_engine.rs  main.rs  pulse_builder.rs  runtime_flags.rs
crates/aurex_app/src/boot/: boot_runtime.rs  boot_scene.rs  mod.rs
crates/aurex_app/src/pulse_builder/: builder.rs  config.rs  mod.rs
crates/aurex_app/src/pulse_sequence/: mod.rs  phase.rs  sequence.rs
crates/aurex_app/src/pulses/: ambient_dreamscape.rs  aurielle_intro.rs  electronic_megacity.rs  jazz_atmosphere.rs  mod.rs
crates/aurex_app/src/timeline/: audio_transport.rs  clock.rs  events.rs  mod.rs  pulse_timeline.rs  scene_bindings.rs  scene_manager.rs  scheduler.rs  transition.rs
crates/aurex_app/src/timeline/scripts/: aurielle_intro.rs  mod.rs
crates/aurex_audio/: Cargo.toml
crates/aurex_conductor/: Cargo.toml
crates/aurex_core/: Cargo.toml
crates/aurex_ecs/: Cargo.toml
crates/aurex_lighting/: Cargo.toml
crates/aurex_midi/: Cargo.toml
crates/aurex_music/: Cargo.toml
crates/aurex_postfx/: Cargo.toml
crates/aurex_pulse/: Cargo.toml
crates/aurex_pulse/examples/: run_pulse.rs
crates/aurex_pulse/src/: beat_driver.rs  boot_world.rs  camera_rig.rs  demo_sequencer.rs  diagnostics.rs  lib.rs  living_boot.rs  loader.rs  prime_pulse.rs  pulse_blueprint.rs  pulse_graph.rs  pulse_runtime.rs  resonance.rs  runner.rs  schema.rs
crates/aurex_pulse/tests/: beat_driver.rs  camera_rig.rs  demo_sequencer.rs  pulse_runtime.rs
crates/aurex_render/: Cargo.toml
crates/aurex_render/src/: generator_stack.rs  lib.rs  typography.rs  world_generator.rs
crates/aurex_render/src/rhythm_field/: mod.rs  modulation.rs  signals.rs  snapshot.rs
crates/aurex_render_sdf/: Cargo.toml
crates/aurex_scene/: Cargo.toml
crates/aurex_shape_synth/: Cargo.toml
docs/: 01_vision.md  02_architecture.md  03_graphics_audio.md  04_runtime_api.md  05_prime_pulse_experience.md  06_dev_log.md  07_runtime_implementation_plan.md  08_architecture_decisions.md  advanced_lighting.md  ai_handoff.md  audio_reactive_system.md  aurex_x_missing_features_and_phased_implementation.md  geometry_nodes.md  material_system.md  procedural_generators.md  procedural_pipeline.md  raymarch_renderer.md  sdf_composition.md  sdf_system.md
docs/aurex_sdk/: AUREX_SDK_INDEX.md  audio_system.md  geometry_nodes.md  scene_ir.md
docs/sdk/: audio_engine.md  audio_system.md  cinematic_systems.md  domain_repetition.md  effect_graph_automation_demo.md  engine_architecture.md  example_pulses.md  field_system.md  gpu_readiness.md  harmonic_system.md  living_boot_screen.md  prime_pulse_system.md  (+17 more)
examples/: aurex_showcase_demo.json  aurora_flight.json  boot_world.json  choir_fractal_growth.json  circuit_cathedral_cinematic.json  circuit_megacity_stress.json  circuit_rhythm_world.json  circuit_world.json  djinn_circuit_cathedral.json  fractal_cathedral_morph.json  fractal_cathedral_orbit.json  fractal_temple.json  fractal_temple_world.json  golden_tempo_fibonacci_phrases.json  golden_tempo_progression.json  harmonic_temple_growth.json  harmonic_tunnel.json  infinite_circuit_city.json  infinite_circuit_megacity.json  infinite_fractal_temple.json  jazz_improv_world.json  neon_motion_trails.json  neon_tunnel.json  neon_tunnel_scene.json  opera_resonance_hall.json  particle_storm.json  pattern_automation_demo.json  pattern_storm_stress.json  pop_stage_city.json  prime_pulse_awaken_demo.json  prime_pulse_cathedral.json  prime_pulse_concert.json  prime_pulse_demo_sequence.json  prime_pulse_flythrough.json  prime_pulse_music.json  prime_pulse_performance_test.json  prime_pulse_rhythm.json  prime_pulse_sanctum.json  prime_pulse_temporal_wave.json  psy_tunnel.json  (+13 more)
scripts/: run_parallel_rhythm_checks.sh
src/: main.rs
(+119 files in other folders)
