[package]
name = "aurex_app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aurex_core = { path = "../aurex_core" }
aurex_conductor = { path = "../aurex_conductor" }
aurex_ecs = { path = "../aurex_ecs" }
aurex_render = { path = "../aurex_render" }
aurex_shape_synth = { path = "../aurex_shape_synth" }
aurex_lighting = { path = "../aurex_lighting" }
aurex_postfx = { path = "../aurex_postfx" }
aurex_audio = { path = "../aurex_audio" }
aurex_midi = { path = "../aurex_midi", optional = true }
aurex_pulse = { path = "../aurex_pulse" }
aurex_render_sdf = { path = "../aurex_render_sdf" }

[features]
default = []
midi_import = ["dep:aurex_midi"]
