[package]
name = "aurex_pulse"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aurex_scene = { path = "../aurex_scene" }
aurex_render_sdf = { path = "../aurex_render_sdf" }
aurex_audio = { path = "../aurex_audio" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
